--- a/themes/elmcip/css/panels.css
+++ b/themes/elmcip/css/panels.css
@@ -18,14 +18,6 @@
   text-align: center;
 }
 
-.kb .panels-flexible-region {
-  background-color: #e2e2d2;
-}
-
-.kb .panels-flexible-region-first {
-  background-color: #bebdae;
-}
-
 .sponsors {
   background-color: #bebdae;
 }
